--- a/index.html
+++ b/index.html
@@ -1,31 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="myApp" lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
-    <title>Waitstaff Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WaitStaff Calculator</title>
 </head>
 
-<body ng-app="">
+<body ng-controller="myCtrl">
     <header>
         <h1>Waitstaff Calculator</h1>
     </header>
     <section class="meal">
         <h3>Meal Details:</h3>
         <br>
-        <form ng-submit="addTransaction(); results=true">
+        <form name="mealInput" ng-submit="submit()" novalidate>
             <div class="form-group">
                 <label for="price">Base Meal Price: $</label>
-                <input type="number" class="form-control" name="price" ng-model="price" min="0" step=".01" placeholder="0.00" required/>
+                <input type="number" class="form-control" name="price" ng-model="data.price" min="0" step=".01" placeholder="0.00" required/>
+                <div class='errorMsg' ng-if="mealInput.price.$touched" ng-messages="mealInput.price.$error">
+                    <div ng-message="required">Please enter a number</div>
+                    <div ng-message="number">Only digits, please!</div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="tax">Tax Rate: %</label>
-                <input type="number" class="form-control" name="tax" ng-model="tax" placeholder="0.00" min="0" max="100" step=".01" required/>
+                <input type="number" class="form-control" name="tax" ng-model="data.tax" placeholder="0.00" min="0" max="100" step=".01" required/>
+                <div class='errorMsg' ng-if="mealInput.tax.$touched" ng-messages="mealInput.tax.$error">
+                    <div ng-message="required">Please enter a number</div>
+                    <div ng-message="number">Only digits, please!</div>
+                </div>
             </div>
             <div class="form-group">
                 <label for="tip">Tip Percentage: %</label>
-                <input type="number" class="form-control" name="tip" ng-model="tip" placeholder="0.00" min="0" max="100" step=".01" required/>
+                <input type="number" class="form-control" name="tip" ng-model="data.tip" placeholder="0.00" min="0" max="100" step=".01" required/>
+                <div class='errorMsg' ng-if="mealInput.tip.$touched" ng-messages="mealInput.tip.$error">
+                    <div ng-message="required">Please enter a number</div>
+                    <div ng-message="number">Only digits, please!</div>
+                </div>
             </div>
             <div>
                 <button class="btn btn-default" type="submit">Add Meal</button>
@@ -35,10 +48,10 @@
     </section>
     <section class="customerTotals">
         <h3>Customer Charges:</h3>
-        <h4>Subtotal: <em><span>{{price + (price * tax) | currency}}</span></em></h4>
-        <h4>Tip: <em><span >{{meal.tip | currency}}</span></em></h4>
+        <h4>Subtotal: <em><span>{{data.subtotal | currency}}</span></em></h4>
+        <h4>Tip: <em><span >{{data.tipAmt | currency}}</span></em></h4>
         <hr>
-        <h4>Total:<em><span >{{meal.total | currency}}</span></em></h4>
+        <h4>Total:<em><span >{{data.total | currency}}</span></em></h4>
     </section>
 
     <section class="earnings">
@@ -51,8 +64,8 @@
     <section class="reset">
         <button id="reset" type="submit">Reset</button>
     </section>
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js" type="text/javascript"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-messages.js" type="text/javascript"></script>
     <script src="main.js" type="text/javascript"></script>
 </body>
 
