earnings info displaying

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>WaitStaff Calculator</title>
 </head>
 
-<body ng-controller="myCtrl">
+<body ng-controller="inputController">
     <header>
         <h1>Waitstaff Calculator</h1>
     </header>
@@ -53,7 +53,6 @@
         <hr>
         <h4>Total:<em><span >{{data.total | currency}}</span></em></h4>
     </section>
-
     <section class="earnings">
         <h3>Earnings Info:</h3>
         <h4>Tip Total: <em><span class="results">{{tipTotal | currency}}</span></em></h4>
