--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </section>
 
     <section class="reset">
-        <button id="reset" type="submit">Reset</button>
+        <button id="reset" ng-click="reset()" type="submit">Reset</button>
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.5/angular-messages.js" type="text/javascript"></script>
