--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,8 @@
             <a href="#/earnings">Earnings</a>
         </nav>
     </header>
-    <div ng-view=""></div>
+
+    <div ng-view class="animate-view"></div>
 
     <section class="reset" ng-controller='resetCtrl'>
         <button id="reset" ng-click="reset()" type="submit">Reset</button>
@@ -28,6 +29,7 @@
     <script src="bower_components/angular/angular.js" type="text/javascript"></script>
     <script src="bower_components/angular-messages/angular-messages.js" type="text/javascript"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="main.js" type="text/javascript"></script>
 </body>
 
